--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     <div class="container">
       <h1>The Weather Rundown</h1>
     </div>
+    <h2>New York</h2>
+    <ul>
+      <li>Friday 05:00</li>
+      <li>Clear</li>
+    </ul>
+    <div class="row">
+      <div class="col-6">
+        <img
+          src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+          alt="Clear"
+        />
+        12°C | °F
+      </div>
+    </div>
+    <div class="col-6">
+      <ul>
+        <li>Precipitation: 0%</li>
+        <li>Wind: 2km/h</li>
+      </ul>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
