--- a/index.html
+++ b/index.html
@@ -16,28 +16,35 @@
   </head>
   <body>
     <div class="container">
-      <h1>The Weather Rundown</h1>
-    </div>
-    <h2>New York</h2>
-    <ul>
-      <li>Friday 05:00</li>
-      <li>Clear</li>
-    </ul>
-    <div class="row">
+      <div class="weatherapp">
+        <h1>The Weather Rundown</h1>
+      </div>
+      <h2>New York</h2>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+            alt="Clear"
+          />
+          12°C | °F
+        </div>
+      </div>
       <div class="col-6">
-        <img
-          src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-          alt="Clear"
-        />
-        12°C | °F
+        <ul>
+          <li>Precipitation: 0%</li>
+          <li>Wind: 2km/h</li>
+        </ul>
       </div>
     </div>
-    <div class="col-6">
-      <ul>
-        <li>Precipitation: 0%</li>
-        <li>Wind: 2km/h</li>
-      </ul>
-    </div>
+    <small>
+      <a href="https://github.com/annafoulger/Weather-App-AF" target="_blank"
+        >Open-Source Code </a
+      >by Anna Foulger
+    </small>
     <script src="src/app.js"></script>
   </body>
 </html>
