--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
-    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
+      <link rel="stylesheet" href="src/style.css" />
+    
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container">
+    
       <div class="weatherapp">
         <h1>The Weather Rundown</h1>
       </div>
+      <div class="container">
       <h2>New York</h2>
       <ul>
         <li>Friday 05:00</li>
@@ -39,12 +39,14 @@
           <li>Wind: 2km/h</li>
         </ul>
       </div>
+
+      <small>
+        <a href="https://github.com/annafoulger/Weather-App-AF" target="_blank"
+          >Open-Source Code </a
+        >by Anna Foulger
+      </small>
+      </div>
     </div>
-    <small>
-      <a href="https://github.com/annafoulger/Weather-App-AF" target="_blank"
-        >Open-Source Code </a
-      >by Anna Foulger
-    </small>
     <script src="src/app.js"></script>
   </body>
 </html>
