--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
       <h2 id ="city"></h2>
       <ul>
-        <li>Friday 05:00</li>
+        <li> Last updated: <span id="date"></span></li>
         <li id ="description"></li>
       </ul>
       <div class="row">
@@ -46,7 +46,7 @@
       </div>
       <div class="col-6">
         <ul>
-          <li>Humidity: <span id="humidity"></span> %</li>
+          <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind"></span> km/h</li>
         </ul>
       
