--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           
           <div class= "float-left">
           <strong id ="temperature"></strong>
-          <span class="units">°C | <a href="#" style=text-decoration:none>°F</a></span>
+          <span class="units">°C | <a href="#" id = "fahrenheit-link" style=text-decoration:none>°F</a></span>
           </div>
           
         </div>
