--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           
           <div class= "float-left">
           <strong id ="temperature"></strong>
-          <span class="units">°C | <a href="#" id = "fahrenheit-link" style=text-decoration:none>°F</a></span>
+          <span class="units"> <a href="#" id="celsius-link" class="active" style=text-decoration:none> °C </a>
+             | <a href="#" id = "fahrenheit-link" style=text-decoration:none>°F</a></span>
           </div>
           
         </div>
