Some css design, final touches

--- a/index.html
+++ b/index.html
@@ -79,11 +79,15 @@
       
     
   </br>
+  </div>
+  </div>
+  <p>
       <small>
         <a href="https://github.com/annafoulger/Weather-App-AF" target="_blank"
           >Open-Source Code </a
         >by Anna Foulger
       </small>
+      </p>
       </div>
       </div>
     <script src="src/app.js"></script>
